--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -1,13 +1,15 @@
-
+.container{
+    background-color: #f3f3df
+}
 .btn{
-    background-color: white; /* Cor inicial do botão */
+    background-color: #f3f3df;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease; 
 }
 .btn:hover{
-    background-color: rgb(207, 205, 205) ;
+    background-color: #ffffff;
     border-radius: 10rem;
     border: 10rem;
 }
