--- a/components/welcome/welcome.module.scss
+++ b/components/welcome/welcome.module.scss
@@ -2,15 +2,16 @@
 @import "styles/mixins/colors.scss";
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-.container{
+.container {
   margin-top: 9rem;
-  font-family: "Inter",sans-serif;
-
+  font-family: "Inter", sans-serif;
+  
 }
 
 .text {
   @include Padding;
   display: flex;
+
 
   h1 {
     font-weight: bold;
@@ -22,23 +23,41 @@
   p {
     font-size: 27px;
     opacity: 0.8;
-    height: 475px;
-    width: 80%;
+    margin-bottom: 3rem;
+    width: 90%;
     text-align: justify;
+  }
+
+  button {
+    width: 275px;
+    height: 67px;
+    border-radius: 30px;
+    border: none;
+    background-color: $dark-green;
+    color: $white-color;
+    font-size: 17px;
+    font-weight: bold;
+    margin-bottom: 11.25rem;
   }
 }
 
-.msg{
-  display: flex;
-  flex-wrap: wrap;
+.slider {
+
+  width: 80%;
+  margin: 0 auto;
 }
 
-.slider{
-  width: 50%;
 
+.swiper-pagination-bullet {
+  background-color: #4caf50;
+  /* Cor padrão da bolinha */
+  opacity: 1;
+  /* Deixa a bolinha visível */
 }
 
-.swiper-pagination-bullet{
-  background-color: #4caf50; /* Cor padrão da bolinha */
-  opacity: 1; /* Deixa a bolinha visível */
+.separator {
+  height: 4px; /* Altura da barra */
+  background-color: #388E3C; /* Cor da barra */
+  margin: 5rem 0; /* Margem acima e abaixo da barra */
+  width: 100%; /* Largura total */
 }
