--- a/components/about_us/about.module.scss
+++ b/components/about_us/about.module.scss
@@ -11,21 +11,21 @@
     border-top-right-radius: 10rem;
     border-bottom-right-radius: 10rem;
     font-family: "Inter", sans-serif;
+
 }
 
 .mensage{
     
     margin: auto;
     text-align: justify;
-    width: 100%;
     h1{
         color: white;
         font-weight: 700;
     }
     p{
-        font-size: 20px;
+        font-size: clamp(10px,20px,20px);
         width: 50vw;
-        
+        min-width: 50vw;
     }
 }
 
