--- a/components/features/modal/card_modal.module.scss
+++ b/components/features/modal/card_modal.module.scss
@@ -1,18 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
 .container {
-    position: fixed;
+    display: flex;
+    position: relative;
+    background-color: #4CAF50;
+    opacity: 0.95;
+    border-radius: 1rem;
+    max-width: 850px;
+    max-height: 700px;
+    min-width: 300px;
+    min-height: 200px;
+    width: 100%;
+    height: 600px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 800px;
-    height: 614px;
-    opacity: 0.9;
-    background-color: #4CAF50;
-    
+
 }
+
+
 
 .close {
     position: absolute;
     top: 10px;
-    right: 0px;
-    align-items: end;
+    right: 10px;
+    font-size: 24px;
+    z-index: 1001;
 }
