--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -1,10 +1,11 @@
 @import "/styles/mixins/colors.scss";
 
 .container {
+  max-width: 2440px;
   padding: 34px 180px;
   width: 100%;
   background-color: $light-green;
-  border-bottom: 0.5px solid ;
+  border-bottom: 0.5px solid;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
@@ -12,9 +13,10 @@
 }
 
 .menu {
-  font-size: 22px;
+  font-size: clamp(10px,22px,22px);
   font-weight: 500;
-  a + a {
+
+  a+a {
     margin-left: 38.9px;
   }
 }
