--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,11 +2,13 @@
 html,
 
 body {
+  max-width: 2440px;
+  min-width: 900px;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+  }
 
 a {
   color: inherit;
