--- a/components/features/features.module.scss
+++ b/components/features/features.module.scss
@@ -9,16 +9,16 @@
     font-family: "Inter", sans-serif;
 
     h1 {
-        font-size: clamp(30px,5vw,60px);
+        font-size: 60px;
         color: $dark-green;
     }
 
     p {
-        font-size: clamp(17px,5vw,35px);
+        font-size: clamp(17px, 5vw, 35px);
         opacity: 0.8;
         height: 475px;
         width: 80%;
-        height: 25rem;
+        height: auto;
         text-align: justify;
     }
 
@@ -37,8 +37,23 @@
 
 }
 
-.modal{
-    h1{
+.modal {
+    h1 {
         font-size: 10px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        @include PaddingMobile;
+
+        h1 {
+            font-size: 40px;
+        }
+
+        p {
+            font-size: 20px;
+            height: auto;
+        }
     }
 }
