Adicionando pontos de coleta

--- a/components/features/cards_info/cards.module.scss
+++ b/components/features/cards_info/cards.module.scss
@@ -21,8 +21,9 @@
 }
 
 @media screen and (max-width: 768px) {
-
-    .image {
+ 
+    .image img{
         width: 200px;
+        height: auto;
     }
 }
