--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,14 +1,14 @@
-
 html,
 
 body {
   max-width: 2440px;
-  min-width: 900px;
-  padding: 0;
+  min-width: 1050px;
+  
   margin: 0;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  }
+}
 
 a {
   color: inherit;
@@ -19,7 +19,11 @@ a {
   box-sizing: border-box;
 }
 
-.slide-tem{
+body {
+  background-color: #f3f3df
+}
+
+.slide-tem {
   width: 50%;
   height: 350px;
   object-fit: cover;
