--- a/components/maps/auxiliars/selector.module.scss
+++ b/components/maps/auxiliars/selector.module.scss
@@ -3,20 +3,19 @@
 
 .container {
     display: flex;
-    margin-top: 3rem;
-    margin-left: 11.25rem;
+    margin: 3rem auto;
     border-radius: 10px;
     display: inline-block;
     width: 80%;
-    height: 40rem;
     font-family: "Inter", sans-serif;
 
     h1 {
         font-size: 40px;
         color: white;
-        margin: 0;
+        margin: 0 0;
         font-weight: 700;
         margin-bottom: 20px;
+        text-align: center;
     }
 }
 
@@ -43,7 +42,6 @@
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
-    width: 80%;
     margin-top: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 
@@ -60,7 +58,7 @@
             }
 
             a {
-                font-size: 16px;
+                font-size: 18px;
                 color: #007bff;
                 font-style: italic;
             }
@@ -80,28 +78,38 @@
 .image img {
     width: 100px; 
     height: auto; 
-    margin-top: 2rem;
 }
 @media screen and (max-width: 768px) {
 
     .container{
+        margin-top: 1rem;
         margin-left: 5.25rem;
+    
+        h1{
+            font-size: 50px;
+        }
+    }
+
+
+    .customSelect{
+        margin-top: 0;
+        width: 35%;
     }
 
     .infoTitle {
-        font-size: 15px;
+        font-size: 20px;
     }
 
     .infoBox {
         ul {
             li {
                 p {
-                    font-size: 14px;
+                    font-size: 23px;
                     text-align: justify;
                 }
 
                 a {
-                    font-size: 10px;
+                    font-size: 19px;
                     color: #007bff;
                     font-style: italic;
                 }
