--- a/components/maps/maps.module.scss
+++ b/components/maps/maps.module.scss
@@ -4,9 +4,10 @@
     display: flex;
     margin: 11.25rem auto;
     height: 700px;
+    border: 1.5px solid black;
     background-color: $dark-green;
     display: flex;
-    width: 90%;
+    width: 85%;
     border-radius: 30px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 
@@ -15,7 +16,7 @@
 
 @media screen and (max-width: 768px) {
     .container {
-        height: 600px;
+        height: 700px;
 
     }
 }
