--- a/components/welcome/welcome.module.scss
+++ b/components/welcome/welcome.module.scss
@@ -61,22 +61,23 @@
 
  .text {
     @include PaddingMobile;
-
+  
     h1 {
-      font-size: 40px;
+      font-size: 60px;
     }
 
     p {
-      font-size: 20px;
+      font-size: 40px;
+      width: 100%;
     }
 
 
   }
 
   .image img{
-    width: 300px;
+    width: 350px;
     height: auto;
-    margin: auto auto;
+    margin-top: 4rem;
   }
 
 
