--- a/components/features/modal/card_modal.module.scss
+++ b/components/features/modal/card_modal.module.scss
@@ -9,8 +9,6 @@
     border-radius: 1rem;
     max-width: 850px;
     max-height: 700px;
-    min-width: 300px;
-    min-height: 200px;
     width: 100%;
     height: 600px;
     top: 50%;
@@ -27,4 +25,15 @@
     right: 10px;
     font-size: 24px;
     z-index: 1001;
+}
+
+.backgroundStyle {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb(0,0,0, 0.4);
+    z-index: 1000;
+
 }
