--- a/components/features/modal/card_modal.module.scss
+++ b/components/features/modal/card_modal.module.scss
@@ -7,10 +7,10 @@
     background-color: #4CAF50;
     opacity: 0.95;
     border-radius: 1rem;
-    max-width: 850px;
-    max-height: 700px;
-    width: 100%;
-    height: 600px;
+    // max-width: 850px;
+    // max-height: 700px;
+    width: 850px;
+    height: 500px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -36,4 +36,11 @@
     background-color: rgb(0,0,0, 0.4);
     z-index: 1000;
 
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 1000px;
+        height: 850px;
+    }
 }
