--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -1,11 +1,12 @@
 
 .container{
     height: 60px;
-    width: 17%;
     margin-top: 15.25rem;
     display: flex;
     justify-content: center; // Alinha horizontalmente ao centro
     align-items: center;   
+    background-color: black;
+    
 }
 
 .containerImages{
@@ -13,18 +14,17 @@
     display: flex;
 }
 .logoFametro img{
-    width: 80px;
+    width: 100px;
     height: auto;
 }
 
 .flatIcon img{
-    width: 80px;
+    width: 100px;
     height: 38px;
     margin-left: 1.5rem;
 }
 @media screen and (max-width: 768px) {
     .container {
-        width: 35%;
         margin-top: 9.25rem;
     }
     .logoFametro img{
