--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -25,6 +25,7 @@
 }
 @media screen and (max-width: 768px) {
     .container {
+        height: 80px;
         margin-top: 9.25rem;
     }
     .logoFametro img{
